--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/architects.css">
 </head>
-<body>
+<body class="work-sans-font">
+    <header>
+        <nav class="navbar">
+            <h3 class="brand"></h3>
+        </nav>
+    </header>
     
 </body>
 </html>
